# gravity

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
utils/: body.h  constants.h  helper_methods.h  shaders.h  spacetime.h  structs.h  system.h
